unpackaged/main/default/objects/FundingAwardRequirement/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>AssignedContact.MailingStreet  &amp; BR() &amp;
AssignedContact.MailingCity &amp;
IF(AssignedContact.MailingState=&quot;&quot;,
&quot;&quot;, &quot;, &quot; &amp; AssignedContact.MailingState) &amp;
&quot; &quot; &amp; AssignedContact.MailingPostalCode &amp; BR() &amp;
AssignedContact.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The mailing address for the &#39;Report Contact&#39;</inlineHelpText>
    <label>Address</label>
    <type>Text</type>
</CustomField>