unpackaged/main/default/objects/FundingAwardRequirement/fields/Challenges_Implementing_Activities__c.field-meta.xml
<CustomField>
    <fullName>Challenges_Implementing_Activities__c</fullName>
    <inlineHelpText>5. What challenges, setbacks or failures did you face implementing these activities? How did you respond to these challenges?</inlineHelpText>
    <label>Challenges Implementing Activities</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>