unpackaged/main/default/objects/FundingAwardRequirement/fields/Challenges_with_Remaining_Activities__c.field-meta.xml
<CustomField>
    <fullName>Challenges_with_Remaining_Activities__c</fullName>
    <inlineHelpText>Describe any challenges you anticipate in implementing the remaining activities of this grant. If your organization needs to modify its plans, describe the proposed changes.</inlineHelpText>
    <label>Challenges with Remaining Activities</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>