unpackaged/main/default/objects/FundingAwardRequirement/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>The email address for the grantee Contact assigned to this report.</description>
    <formula>AssignedContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The email address for the grantee Contact assigned to this report.</inlineHelpText>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>