unpackaged/main/default/objects/FundingAwardRequirement/fields/Contact_Organization__c.field-meta.xml
<CustomField>
    <fullName>Contact_Organization__c</fullName>
    <description>The Grantee organization the Report Contact is associated with (should be the same as the organization awarded the grant/request this report is related to).</description>
    <formula>AssignedContact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Grantee organization the Report Contact is associated with (should be the same as the organization awarded the grant/request this report is related to).</inlineHelpText>
    <label>Contact Organization</label>
    <type>Text</type>
</CustomField>