unpackaged/main/default/objects/FundingAwardRequirement/fields/DAF_ID__c.field-meta.xml
<CustomField>
    <fullName>DAF_ID__c</fullName>
    <description>Formula field linking DAF ID number on Request Record to the Grantee Requirement Record.</description>
    <formula>FundingAward.IndividualApplication.DAF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field linking DAF ID number on Request Record to the Grantee Requirement Record.</inlineHelpText>
    <label>DAF ID</label>
    <type>Text</type>
</CustomField>