unpackaged/main/default/objects/FundingAwardRequirement/fields/DAF_Program_Officer__c.field-meta.xml
<CustomField>
    <fullName>DAF_Program_Officer__c</fullName>
    <description>The DAF Program Officer as set on the parent Request/Grant record.</description>
    <formula>FundingAward.IndividualApplication.DAF_Program_Officer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The DAF Program Officer as set on the parent Request/Grant record.</inlineHelpText>
    <label>DAF Program Officer</label>
    <type>Text</type>
</CustomField>