unpackaged/main/default/objects/FundingAwardRequirement/fields/Days_from_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Due_Date__c</fullName>
    <description>Number of days before or after the report&#39;s &#39;Due Date&#39;. Used in email reminder workflow rules and templates.</description>
    <formula>TODAY() - DATEVALUE(DueDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days before or after the report&#39;s &#39;Due Date&#39;. Used in email reminder workflow rules and templates.</inlineHelpText>
    <label>Days from Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>