unpackaged/main/default/objects/FundingAwardRequirement/fields/Done_Date__c.field-meta.xml
<CustomField>
    <fullName>Done_Date__c</fullName>
    <description>Date the requirement is approved, rejected, or waived.</description>
    <inlineHelpText>Please put the date the requirement is approved, rejected, or waived.</inlineHelpText>
    <label>Done Date</label>
    <type>Date</type>
</CustomField>