unpackaged/main/default/objects/FundingAwardRequirement/fields/Exclude_from_Email__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Email__c</fullName>
    <description>Is the &quot;Exclude from Emails&quot; box checked on the Grantee&#39;s account record? If checked will suppress report reminders from being sent to the grantee.</description>
    <formula>FundingAward.Awardee.Exclude_from_Automated_Emails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the &quot;Exclude from Emails&quot; box checked on the Grantee&#39;s account record? If checked will suppress report reminders from being sent to the grantee.</inlineHelpText>
    <label>Exclude from Email</label>
    <type>Checkbox</type>
</CustomField>