unpackaged/main/default/objects/FundingAwardRequirement/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <formula>AssignedContact.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The fax number for the Report Contact.</inlineHelpText>
    <label>Fax</label>
    <type>Text</type>
</CustomField>