unpackaged/main/default/objects/FundingAwardRequirement/fields/Financial_Template__c.field-meta.xml
<CustomField>
    <fullName>Financial_Template__c</fullName>
    <description>Link to a template of the financial reports grantees should submit. Included on Reports&#39; layouts in the portal.</description>
    <formula>HYPERLINK(&quot;https://ajwsnpc--dev--c.sandbox.vf.force.com/resource/1760020507000/FinancialTemplate?&quot;,&quot;Financial Report Template&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to a template of the financial reports grantees should submit. Included on Reports&#39; layouts in the portal.</inlineHelpText>
    <label>Financial Template</label>
    <type>Text</type>
</CustomField>