unpackaged/main/default/objects/FundingAwardRequirement/fields/Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grant_Amount__c</fullName>
    <description>The Amount of the Grant/Request this report is related to. Derived from the Request record&#39;s Amount field.</description>
    <formula>FundingAward.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Amount of the Grant/Request this report is related to. Derived from the Request record&#39;s Amount field.</inlineHelpText>
    <label>Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>