unpackaged/main/default/objects/FundingAwardRequirement/fields/Grant_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Date__c</fullName>
    <formula>FundingAward.DecisionDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Award Date for the Request/Grant this report is related to.</inlineHelpText>
    <label>Grant Date</label>
    <type>Date</type>
</CustomField>