unpackaged/main/default/objects/FundingAwardRequirement/fields/Grants_Manager__c.field-meta.xml
<CustomField>
    <fullName>Grants_Manager__c</fullName>
    <description>The Grants Manager assigned to the Grant/Request this report is related to.</description>
    <formula>Grants_Manager_User__r.FirstName &amp; &quot; &quot; &amp;  Grants_Manager_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Grants Manager assigned to the Grant/Request this report is related to.</inlineHelpText>
    <label>Grants Manager</label>
    <type>Text</type>
</CustomField>