unpackaged/main/default/objects/FundingAwardRequirement/fields/Grants_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Grants_Manager_Email__c</fullName>
    <description>The Email address for the Grants Manager assigned to this report.</description>
    <inlineHelpText>The Email address for the Grants Manager assigned to this report.</inlineHelpText>
    <label>Grants Manager Email</label>
    <type>Email</type>
</CustomField>