unpackaged/main/default/objects/FundingAwardRequirement/fields/Grants_Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Grants_Manager_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grants Manager for this Requirement. Set by automation when Grants Manager is set on the parent Request. Can be changed manually.</description>
    <inlineHelpText>Grants Manager for this Requirement. Set by automation when Grants Manager is set on the parent Request. Can be changed manually.</inlineHelpText>
    <label>Grants Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Award_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>