unpackaged/main/default/objects/FundingAwardRequirement/fields/Greatest_Success_in_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Greatest_Success_in_Last_Year__c</fullName>
    <inlineHelpText>Describe the one greatest success that your organization has had in the last year.</inlineHelpText>
    <label>Greatest Success in Last Year</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>