unpackaged/main/default/objects/FundingAwardRequirement/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>Space to add internal notes on the grantee requirements.</description>
    <inlineHelpText>GM: Please add any internal notes regarding the grantee requirement here, including follow-up notes.</inlineHelpText>
    <label>Internal Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>