unpackaged/main/default/objects/FundingAwardRequirement/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this report overdue?</inlineHelpText>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>