unpackaged/main/default/objects/FundingAwardRequirement/fields/Key_Effects_of__c.field-meta.xml
<CustomField>
    <fullName>Key_Effects_of__c</fullName>
    <inlineHelpText>What were the key effects or results of these activities?</inlineHelpText>
    <label>Key Effects of Activities</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>