unpackaged/main/default/objects/FundingAwardRequirement/fields/Kreyol_Month_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Kreyol_Month_and_Year__c</fullName>
    <description>Month and Year in Kreyol for Conga Templates.</description>
    <formula>CASE(TEXT(MONTH(DATEVALUE(DueDate))),&quot;1&quot;, &quot;janvye&quot;, &quot;2&quot;, &quot;fevriye&quot;,&quot;3&quot;, &quot;Mas&quot;,&quot;4&quot;, &quot;Avril&quot;,&quot;5&quot;, &quot;Me&quot;,&quot;6&quot;, &quot;Jen&quot;, &quot;7&quot;, &quot;Jiyè&quot;, &quot;8&quot;, &quot;Out&quot;, &quot;9&quot;, &quot;Septanm&quot;, &quot;10&quot;, &quot;Oktòb&quot;, &quot;11&quot;, &quot;Novanm&quot;, &quot;12&quot;, &quot;Desanm&quot;, &quot;&quot;)

&amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE((DueDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Month and Year in Kreyol for Conga Templates.</inlineHelpText>
    <label>Kreyol Month and Year</label>
    <type>Text</type>
</CustomField>