unpackaged/main/default/objects/FundingAwardRequirement/fields/Last_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Sent__c</fullName>
    <description>Last email reminder sent to the grantee and/or PO regarding this report. Set and used by automation for sending these reminders.</description>
    <inlineHelpText>Last email reminder sent to the grantee and/or PO regarding this report. Set and used by automation for sending these reminders.</inlineHelpText>
    <label>Last Reminder Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>