unpackaged/main/default/objects/FundingAwardRequirement/fields/Learned_in_Course_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Learned_in_Course_of_Work__c</fullName>
    <inlineHelpText>What have you learned in the course of doing this work? Based on this learning, is your organization making any changes to your organizational goals, strategies, processes and/or future activities? If so, please describe.</inlineHelpText>
    <label>Learned in Course of Work</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>