unpackaged/main/default/objects/FundingAwardRequirement/fields/Main_Activities_During_Grant_Period__c.field-meta.xml
<CustomField>
    <fullName>Main_Activities_During_Grant_Period__c</fullName>
    <inlineHelpText>Describe the main activities that you carried out during this grant period. If capacity building was an objective of your grant, please include anything related to capacity-building in your answers below.</inlineHelpText>
    <label>Main Activities During Grant Period</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>