unpackaged/main/default/objects/FundingAwardRequirement/fields/My_Team_Requirements__c.field-meta.xml
<CustomField>
    <fullName>My_Team_Requirements__c</fullName>
    <description>Used in Director reports/list views to display Grantee Requirements assigned to the Director&#39;s team.</description>
    <formula>OR($User.Id = FundingAward.IndividualApplication.Program__r.Program_Director_Area__c,
$User.Id = FundingAward.IndividualApplication.Program__r.Associate_Director_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Director reports/list views to display Grantee Requirements assigned to the Director&#39;s team.</inlineHelpText>
    <label>My Team Requirements</label>
    <type>Checkbox</type>
</CustomField>