unpackaged/main/default/objects/FundingAwardRequirement/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>AssignedContact.FirstName &amp;
IF(AssignedContact.MiddleName=&quot;&quot;,
&quot;&quot;, &quot; &quot; &amp; AssignedContact.MiddleName)
&amp; &quot; &quot; &amp; AssignedContact.LastName
&amp;
IF(AssignedContact.Suffix=&quot;&quot;,
&quot;&quot;, &quot;, &quot; &amp; AssignedContact.Suffix)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full name (including middle name, suffix, etc.) for the Report Contact.</inlineHelpText>
    <label>Name</label>
    <type>Text</type>
</CustomField>