unpackaged/main/default/objects/FundingAwardRequirement/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <formula>FundingAward.AwardNumber</formula>
    <label>Number</label>
    <type>Text</type>
</CustomField>