unpackaged/main/default/objects/FundingAwardRequirement/fields/Org_Main_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Org_Main_Email_2__c</fullName>
    <description>Main email address for the Organization receiving the Grant/Request this report is related to. Copied from a similar field on the Request record (which in turn is based on the Org email field on the parent Grantee record). Used in auto-generated report reminders.</description>
    <inlineHelpText>Main email address for the Organization receiving the Grant/Request this report is related to. Copied from a similar field on the Request record (which in turn is based on the Org email field on the parent Grantee record). Used in auto-generated report reminders.</inlineHelpText>
    <label>Org Main Email</label>
    <type>Email</type>
</CustomField>