unpackaged/main/default/objects/FundingAwardRequirement/fields/Org_Main_Email__c.field-meta.xml
<CustomField>
    <fullName>Org_Main_Email__c</fullName>
    <description>Main email address for the Organization receiving the Grant/Request.</description>
    <formula>FundingAward.Awardee.Organization_Main_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Main email address for the Organization receiving the Grant/Request.</inlineHelpText>
    <label>Org Main Email</label>
    <type>Text</type>
</CustomField>