unpackaged/main/default/objects/FundingAwardRequirement/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>FundingAward.Awardee.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The account record for the grantee organization awarded the Grant/Request this report is related to.</inlineHelpText>
    <label>Organization</label>
    <type>Text</type>
</CustomField>