unpackaged/main/default/objects/FundingAwardRequirement/fields/Organization_Address__c.field-meta.xml
<CustomField>
    <fullName>Organization_Address__c</fullName>
    <description>The address of the organization that received the Grant/Request this report is related to. Derived from the Address on the Grantee&#39;s account record.</description>
    <formula>FundingAward.IndividualApplication.Organization_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The address of the organization that received the Grant/Request this report is related to. Derived from the Address on the Grantee&#39;s account record.</inlineHelpText>
    <label>Organization Address</label>
    <type>Text</type>
</CustomField>