unpackaged/main/default/objects/FundingAwardRequirement/fields/Organization_AKA__c.field-meta.xml
<CustomField>
    <fullName>Organization_AKA__c</fullName>
    <description>The AKA of the organization that received the Grant/Request this report is related to. Derived from the AKA field on the Grantee&#39;s account record.</description>
    <formula>FundingAward.Awardee.AKA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The AKA of the organization that received the Grant/Request this report is related to. Derived from the AKA field on the Grantee&#39;s account record.</inlineHelpText>
    <label>Organization AKA</label>
    <type>Text</type>
</CustomField>