unpackaged/main/default/objects/FundingAwardRequirement/fields/Organization_Language__c.field-meta.xml
<CustomField>
    <fullName>Organization_Language__c</fullName>
    <formula>TEXT(FundingAward.Awardee.Language_Preference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Language</label>
    <type>Text</type>
</CustomField>