unpackaged/main/default/objects/FundingAwardRequirement/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <description>The name of the organization that received the Grant/Request this report is related to. Derived from the Name field on the Grantee&#39;s account record.</description>
    <formula>FundingAward.Awardee.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the organization that received the Grant/Request this report is related to. Derived from the Name field on the Grantee&#39;s account record.</inlineHelpText>
    <label>Organization Name</label>
    <type>Text</type>
</CustomField>