unpackaged/main/default/objects/FundingAwardRequirement/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>AssignedContact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The phone number on the ContacT record for the Report Contact</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>