unpackaged/main/default/objects/FundingAwardRequirement/fields/PO_Evaluation_Comments__c.field-meta.xml
<CustomField>
    <fullName>PO_Evaluation_Comments__c</fullName>
    <inlineHelpText>PO&#39;s: You may note your evaluation/comments of the report here. This is internal and won&#39;t be shared with the grantee. Optional.</inlineHelpText>
    <label>PO Evaluation Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>