unpackaged/main/default/objects/FundingAwardRequirement/fields/PO_Report_Comments__c.field-meta.xml
<CustomField>
    <fullName>PO_Report_Comments__c</fullName>
    <inlineHelpText>PO&#39;s: Please add any comments for the Grantee. These comments will appear on the Grantee Portal if you &quot;kick back&quot; the report to have them resubmit.</inlineHelpText>
    <label>PO Comments for Grantee</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>