unpackaged/main/default/objects/FundingAwardRequirement/fields/Prevent_Future_Crises__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Future_Crises__c</fullName>
    <inlineHelpText>What steps will your organization take to prevent future crises and sustain and build upon the results of the crisis response activities?</inlineHelpText>
    <label>Prevent Future Crises</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>