unpackaged/main/default/objects/FundingAwardRequirement/fields/Primary_Staff_User__c.field-meta.xml
<CustomField>
    <fullName>Primary_Staff_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary staff member for this Requirement. Set by automation when Primary staff is set on the parent Request. Can be changed manually.</description>
    <inlineHelpText>Primary staff member for this Requirement. Set by automation when Primary staff is set on the parent Request. Can be changed manually.</inlineHelpText>
    <label>Primary Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Award_Requirements1</relationshipName>
    <type>Lookup</type>
</CustomField>