unpackaged/main/default/objects/FundingAwardRequirement/fields/Program_Officer_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Officer_Email__c</fullName>
    <description>The Email address for the Primary Staff assigned to this report. Used in email alerts.</description>
    <inlineHelpText>The Email address for the Primary Staff assigned to this report. Used in email alerts.</inlineHelpText>
    <label>Program Officer Email</label>
    <type>Email</type>
</CustomField>