unpackaged/main/default/objects/FundingAwardRequirement/fields/project_title__c.field-meta.xml
<CustomField>
    <fullName>project_title__c</fullName>
    <formula>FundingAward.Project_Title__c</formula>
    <label>project title</label>
    <type>Text</type>
</CustomField>