unpackaged/main/default/objects/FundingAwardRequirement/fields/Request_Geo_Area_Served__c.field-meta.xml
<CustomField>
    <fullName>Request_Geo_Area_Served__c</fullName>
    <description>The geographical area served of the Grant/Request this report is related to. Derived from the Request record&#39;s &#39;Geographical Area Served&#39; field.</description>
    <formula>TEXT(FundingAward.IndividualApplication.Geographical_Area_Served__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The geographical area served of the Grant/Request this report is related to. Derived from the Request record&#39;s &#39;Geographical Area Served&#39; field.</inlineHelpText>
    <label>Request Geo Area Served</label>
    <type>Text</type>
</CustomField>