unpackaged/main/default/objects/FundingAwardRequirement/fields/Request_Primary_Staff__c.field-meta.xml
<CustomField>
    <fullName>Request_Primary_Staff__c</fullName>
    <description>Primary Staff of Associated Request Record</description>
    <formula>FundingAward.IndividualApplication.Primary_Staff_User__r.FirstName &amp; &quot; &quot; &amp;  FundingAward.IndividualApplication.Primary_Staff_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Staff of Associated Request Record</inlineHelpText>
    <label>Request Primary Staff</label>
    <type>Text</type>
</CustomField>