unpackaged/main/default/objects/FundingAwardRequirement/fields/Request_Primary_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>Request_Primary_Staff_Email__c</fullName>
    <description>The Email address for the Primary Staff assigned to this report.</description>
    <formula>IF(ISBLANK(Primary_Staff_User__c),FundingAward.IndividualApplication.Owner:User.Email,Primary_Staff_User__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Email address for the Primary Staff assigned to this report.</inlineHelpText>
    <label>Request Primary Staff Email</label>
    <type>Text</type>
</CustomField>