unpackaged/main/default/objects/FundingAwardRequirement/fields/Request_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Request_Project_Title__c</fullName>
    <description>The Project Title of the Request/Grant this report is related to. Used in Conga templates.</description>
    <formula>FundingAward.IndividualApplication.Project_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Project Title of the Request/Grant this report is related to. Used in Conga templates.</inlineHelpText>
    <label>Request Project Title</label>
    <type>Text</type>
</CustomField>