unpackaged/main/default/objects/FundingAwardRequirement/fields/Request_Project_Title_Grantee_Lang__c.field-meta.xml
<CustomField>
    <fullName>Request_Project_Title_Grantee_Lang__c</fullName>
    <description>The Project Title in the grantee&#39;s language of the Request/Grant this report is related to. Used in Conga templates.</description>
    <formula>FundingAward.IndividualApplication.Project_Title_Grantee_Language__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Project Title in the grantee&#39;s language of the Request/Grant this report is related to. Used in Conga templates.</inlineHelpText>
    <label>Request Project Title Grantee Lang</label>
    <type>Text</type>
</CustomField>