unpackaged/main/default/objects/FundingAwardRequirement/fields/Request_Secondary_Staff__c.field-meta.xml
<CustomField>
    <fullName>Request_Secondary_Staff__c</fullName>
    <formula>FundingAward.IndividualApplication.Secondary_Staff__r.FirstName &amp; &quot; &quot; &amp;  FundingAward.IndividualApplication.Secondary_Staff__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>In Country Staff associated with grant.</inlineHelpText>
    <label>Request Secondary Staff</label>
    <type>Text</type>
</CustomField>