unpackaged/main/default/objects/FundingAwardRequirement/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <description>The Status of the Request/Grant this report is related to.</description>
    <formula>TEXT(FundingAward.IndividualApplication.InternalStatus)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Status of the Request/Grant this report is related to.</inlineHelpText>
    <label>Request Status</label>
    <type>Text</type>
</CustomField>