unpackaged/main/default/objects/FundingAwardRequirement/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <formula>FundingAward.IndividualApplication.Secondary_Staff__r.FirstName &amp; &quot; &quot; &amp; FundingAward.IndividualApplication.Secondary_Staff__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>In Country Staff associated with grant.</inlineHelpText>
    <label>Request Type</label>
    <type>Text</type>
</CustomField>