unpackaged/main/default/objects/FundingAwardRequirement/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <inlineHelpText>Please choose the type of reporting requirements.</inlineHelpText>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capital Expenditures Report</fullName>
            </value>
            <value>
                <fullName>Final Financial Report</fullName>
            </value>
            <value>
                <fullName>Final Narrative Report</fullName>
            </value>
            <value>
                <fullName>Grant Agreement</fullName>
            </value>
            <value>
                <fullName>Interim Financial Report</fullName>
            </value>
            <value>
                <fullName>Interim Narrative Report</fullName>
            </value>
            <value>
                <fullName>Progress Check-In</fullName>
            </value>
            <value>
                <fullName>Grant Amendment</fullName>
            </value>
            <value>
                <fullName>GEF Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>